fix: fix product catalog layout issues

--- a/client/src/customer/components/Shop/shop.css
+++ b/client/src/customer/components/Shop/shop.css
@@ -3,13 +3,13 @@
 }
 
 .shop-heading {
-    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .filter-options {
     width: 320px;
     margin-top: 109px;
-    margin-right: 30px;
+    margin-right: 20px;
 }
 
 .filter-subcategory {
