--- a/client/src/customer/features/ProductCatalog/product-catalog.css
+++ b/client/src/customer/features/ProductCatalog/product-catalog.css
@@ -2,4 +2,5 @@
     display: grid;
     gap: 20px;
     margin-top: 30px;
+    width: calc(100vw - 380px);
 }
